css/style.css
*, *::before, *::after {
  box-sizing: border-box;
}

body {
  font-family: 'Lato', sans-serif;
  background-color: #85419E;
  font-size: 20px;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Luckiest Guy', cursive;
  font-size: 70px;
  margin: 30px;
  color: white;
  text-align: center;
}

h2 {
  margin: 100px 30px;
}

/* HEADER */

header, #hero, footer {
  text-align: center;
}

header {
  position: relative;
  top: 0;
  display: flex;
  flex-direction: column;
  padding: 10px;
  background-color: #85419ec7;
  width: 100%;
  height: auto;
  text-align: center;
}

#logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: auto;
}

#logo img {
  width: 150px;
  margin: auto;
}

nav {
  position: sticky;
  width: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
  
}

nav ul{
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

nav li {
  background-color: #7C9E31;
  text-align: center;
  flex-basis: 160px;
  flex-shrink: 0;
  flex-grow: 1;
  max-width: auto;
  padding: 10px 0;
  margin: 20px 5px;
  border-radius: 1rem;
  box-shadow: 
    inset 5px 5px 7px rgba(0, 0, 0, 0.3),
    inset -2px -2px 5px rgba(0, 0, 0, 0.3);
}

nav a {
  text-decoration: none;
  color: black;
  padding: 5px;
}

nav a:hover, nav a:active {
  text-shadow: 0 0 7px white;
  text-decoration: overline;
  text-decoration-color: white;
}

#back-to-top {
  position: fixed;
  bottom: 0;
  left: 0;
  margin: 20px;
  width: 100px;
  text-align: center;
  background-color: #7c9e31a8;
  padding: 10px;
  border-radius: 2rem;
  font-weight: 800;
  text-decoration: none;
  color: black;
  z-index: 10;
}

#back-to-top:hover, #back-to-top:active {
  text-shadow: 0 0 7px white;
  text-decoration-color: white;
}


/* HERO SECTION */

#hero {
  background-color: #CD78EB;
  width: 70%;
  padding: 20px;
  margin: 20px auto;
  font-weight: bolder;
  color: black;
  border-radius: 3rem;
  border: 1px solid rgba(0, 0, 0, 0.4);
  box-shadow: 
    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
}

#hero img{
  width: 500px;
  max-width: 100%;
}

/* BIO SECTION */

#bio {
  margin-top: 300px;
  text-align: center;
}

#bio h2 {
  margin: 100px 0;
  font-size: 65px;
}

#bio .subject {
  margin-top: 100px;
  font-size: 33px;
  font-variant: small-caps;
  color: black;
}

#bio .answer, #directions {
  background-color: #7C9E31;
  max-width: 600px;
  padding: 20px;
  width: fit-content;
  border-radius: 1rem;
  margin: auto;
}

/* HOBBIES SECTION */

#hobbies {
  margin: 300px auto 0 auto;
  display: flex;
  flex-direction: column;
  margin-bottom: 300px;
  max-width: 430px;
}

#hobbies h2 {
  margin-bottom: 20px;
}

#hobbies div {
  margin: auto;
  color: white;
  text-align: right;
}

#hobbies ul {
  display: flex;
  flex-direction: column;
}

#hobbies li:nth-child(2n) {
  font-weight: 900;
  color: rgb(167, 255, 255);
  font-size: 30px;
  text-decoration: underline;
  text-decoration-style: dotted;
  text-decoration-thickness: 4px;
}

#hobbies li:nth-child(2n + 1) {
  color: rgb(255, 183, 149); 
  font-variant: small-caps;
  font-size: 30px;
  font-weight: 800;
  text-shadow: 10px 20px #d1f08e;
}

#hobbies li:last-child {
  height: 150px;
  margin-bottom: 0;
}

audio {
  display: block;
  margin: 50px auto;
}

#hobbies li {
  position: relative;
  font-size: 25px;
  list-style: none;
  margin-bottom: 80px;
}

#hobbies li::before {
  content: '';
  display: inline-block;
  position: relative;
  top: .25em;
  width: 0;
  height: 0;
  border-top: 20px solid transparent;
  border-left: 40px solid #7C9E31;
  border-bottom: 20px solid transparent;
  margin-right: .5em;
}

/* PHOTO GALLERY */

#gallery {
  margin-top: 500px;
  width: auto;
  margin: auto;
  text-align: center;
  border-radius: 3rem;
  box-shadow: 
    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
  padding: 30px;
  background-color: #CD78EB;
}

#gallery h2 {
  margin: 50px auto;
  color: black;
}

figure img {
  border: 15px groove black;
  max-width: 100%;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.473);
}

figcaption {
  padding: 15px;
  background-color: #7C9E31;
  margin: 20px auto;
  border-radius: 3rem;
}

hr {
  font-weight:900;
  color: #c7eb78;
}

/* LIT SECTION */

#lit {
  margin: 300px auto;
  max-width: 800px;
  background-color: #c7eb78;
  padding: 2rem 2rem;
  border-radius: 4rem;
  box-shadow: 
    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
}

#lit h2 {
  color: black;
  text-align: center;
  margin: 0;
  padding: 0;
}

#lit p:first-child:first-letter {
  float: left;
  font-size: 120px;
  padding: 15px 30px;
  margin: 10px;
  background-color: #CD78EB;
  box-shadow: 
    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
  border-radius: 50% 40% 60% 50%;
  border: 5px double #85419E;
  font-family: 'Luckiest Guy', cursive;
}

/* FORM SECTION */

#form-container h2 {
  margin-bottom: 20px;
}

#form-container {
  margin: 10px auto;
  text-align: center;
}

#form-container label {
  padding: 10px;
  font-variant: small-caps;
  font-size: 24px;
}

#form-container input, 
#form-container select, 
#form-container textarea{
  margin-bottom: 20px;
  font-size: 18px;
  padding: 15px 30px;
  background-color: #7C9E31;
  border-radius: 2rem;
  border: none;
  box-shadow: 
    inset 1px 1px 3px rgba(0, 0, 0, 0.3),
    inset -1px -1px 3px rgba(0, 0, 0, 0.3);
}

#message {
  max-width: 500px;
  height: 100px;
}

/* MUSIC SECTION */

#tune {
  margin: 300px 0;
}

#directions {
  margin: auto;
  text-align: center;
}

#music {
  background-color: #CD78EB;
  font-size: 16px;
  width: 100%;
  height: auto;
  margin: 50px auto;
  padding: 10px;
  box-shadow: 
    inset 7px 7px 10px rgba(0, 0, 0, 0.3),
    inset -5px -5px 10px rgba(0, 0, 0, 0.3);
  border-radius: 3rem;
}


.mi {
  align-self: flex-start;
}

.fa, .se, .sol, .si, .la, .li, .ti, .fi, .le, #mi, #do {
  align-self: end;
}

.do {
  align-self: center;
}

.ra {
  align-self: flex-start;
}

.a-section, .b-section {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  font-size: 20px;
  min-height: 300px;
  width: 100%;
  margin: 100px auto;
  gap: 2px;
  padding: 5px;
  border-radius: 2rem;
}

.a-section {
  background-color: white;
}

.b-section {
  background-color:#d1f08e; 
}

.a-section span, .b-section span {
  border-bottom: 40px solid transparent;
}

/* VIDEO SECTION */
#video-container {
  position: relative;
  padding-bottom: 80%;
  padding-top: 25px;
  height: 0px;
}

#myVideo {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
}

figcaption {
  text-align: center;
}

/* FOOTER SECTION */

footer {
  padding: 30px;
  color: white;
}

/*MEDIA QUERIES */

@media screen and (min-width: 60em) {
  figure {
    display: grid;
    grid-template-columns: 2fr 1fr;
    column-gap: 0;
  }

  figcaption {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.7rem;
    margin: auto;
    margin-left: 3rem;
  }

  #lit {
    max-width: 100%;
    columns: 25rem;
  }

  .a-section, .b-section {
    min-height: 200px;
    font-size: 23px;
    background-color: initial;
  }

  #hobbies {
    margin-right: auto;
    margin-left: auto;
  }

}

@media screen and (min-width: 100em) {
  nav {
    overflow-x: hidden;
  }

  #gallery {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
  }

  #gallery h2 {
    grid-column: 1/-1;
  }

  hr {
    display: none;
  }

  figure {
    display: block;
  }

  figcaption {
    margin: 2rem auto 0 auto;
    max-width: 500px;
  }

  #bio {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  #bio h2 {
    grid-column: 1/3;
  }

  #hobbies {
    max-width: 70%;
    display: block;
  }

  #hobbies ul {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  audio {
    margin: 50px 0 0 200px;
  }

  #video-container {
    width: 50%;
    padding-bottom: 40%;
    margin: auto;
  }
}

